[package]
name = "audio_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
#audio = "0.2"
#bittle = "0.2.1"
cpal = "0.15.3"
ringbuf = "0.3.3"
#minimp3 = "*"
#rubato = "*"
#minimp3 = { git = "https://github.com/udoprog/minimp3-rs", branch = "next" }
#rubato = { git = "https://github.com/udoprog/rubato", branch = "next" }
#rodio = "0.17"
sdl2 = "0.36"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
